namespace DefaultNamespace
{
    public interface IEasyMode
    {
        public void load();
    }
}