namespace DefaultNamespace
{
    public interface ILogic
    {
        public void gameOver();
    }
}